# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
