[package]
name = "zero2prod"
version = "0.1.0"
authors = ["clmno <clament.john.k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
serde = "1.0.126"
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.2"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1"
once_cell = "1.7.2"